--- a/rules.conf
+++ b/rules.conf
@@ -40,6 +40,7 @@ DOMAIN-SUFFIX,51wnl-cq.com,DIRECT
 DOMAIN-SUFFIX,56.com,DIRECT
 DOMAIN-SUFFIX,58.com,DIRECT
 DOMAIN-SUFFIX,58pic.com,DIRECT
+DOMAIN-SUFFIX,64clouds.com,DIRECT
 DOMAIN-SUFFIX,699pic.com,DIRECT
 DOMAIN-SUFFIX,6k6g.com,DIRECT
 DOMAIN-SUFFIX,7down.com,DIRECT
@@ -156,6 +157,7 @@ DOMAIN-SUFFIX,hdslb.com,DIRECT
 DOMAIN-SUFFIX,heikeyun.net,DIRECT
 DOMAIN-SUFFIX,hexun.com,DIRECT
 DOMAIN-SUFFIX,hnair.com,DIRECT
+DOMAIN-SUFFIX,hostloc.com,DIRECT
 DOMAIN-SUFFIX,huaban.com,DIRECT
 DOMAIN-SUFFIX,huawei.com,DIRECT
 DOMAIN-SUFFIX,huaweicloud.com,DIRECT
@@ -164,7 +166,9 @@ DOMAIN-SUFFIX,huofar.com,DIRECT
 DOMAIN-SUFFIX,hupu.com,DIRECT
 DOMAIN-SUFFIX,huya.com,DIRECT
 DOMAIN-SUFFIX,icourse163.org,DIRECT
+DOMAIN-SUFFIX,idc.wiki,DIRECT
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
+DOMAIN-SUFFIX,ifdream.net,DIRECT
 DOMAIN-SUFFIX,ifeng.com,DIRECT
 DOMAIN-SUFFIX,iflyrec.com,DIRECT
 DOMAIN-SUFFIX,iflytek.com,DIRECT
@@ -262,6 +266,7 @@ DOMAIN-SUFFIX,sc115.com,DIRECT
 DOMAIN-SUFFIX,sf-express.com,DIRECT
 DOMAIN-SUFFIX,shimo.im,DIRECT
 DOMAIN-SUFFIX,shipsoho.com,DIRECT
+DOMAIN-SUFFIX,shundaoer.tech,DIRECT
 DOMAIN-SUFFIX,sina.com,DIRECT
 DOMAIN-SUFFIX,skycn.com,DIRECT
 DOMAIN-SUFFIX,slack.com,DIRECT
@@ -301,6 +306,7 @@ DOMAIN-SUFFIX,uisdc.com,DIRECT
 DOMAIN-SUFFIX,umeng.com,DIRECT
 DOMAIN-SUFFIX,undraw.co,DIRECT
 DOMAIN-SUFFIX,unsplash.com,DIRECT
+DOMAIN-SUFFIX,uovz.com,DIRECT
 DOMAIN-SUFFIX,uuu9.com,DIRECT
 DOMAIN-SUFFIX,v2ex.com,DIRECT
 DOMAIN-SUFFIX,verycd.com,DIRECT
