--- a/rules.conf
+++ b/rules.conf
@@ -1,4 +1,3 @@
-# Shadowrocket: 2020-04-19 16:24:45
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 127.0.0.0/8, *.local, captive.apple.com
@@ -143,6 +142,7 @@ DOMAIN-SUFFIX,fengniao.com,DIRECT
 DOMAIN-SUFFIX,gamersky.com,DIRECT
 DOMAIN-SUFFIX,ganji.com,DIRECT
 DOMAIN-SUFFIX,gaodun.com,DIRECT
+DOMAIN-SUFFIX,gcorelabs.com,DIRECT
 DOMAIN-SUFFIX,geetest.com,DIRECT
 DOMAIN-SUFFIX,getui.com,DIRECT
 DOMAIN-SUFFIX,gifhome.com,DIRECT
