--- a/rules.conf
+++ b/rules.conf
@@ -211,6 +211,7 @@ DOMAIN-SUFFIX,longzhulive.com,DIRECT
 DOMAIN-SUFFIX,lvmama.com,DIRECT
 DOMAIN-SUFFIX,macrr.com,DIRECT
 DOMAIN-SUFFIX,mafengwo.net,DIRECT
+DOMAIN-SUFFIX,magiconch.com,DIRECT
 DOMAIN-SUFFIX,meishij.net,DIRECT
 DOMAIN-SUFFIX,meitu.com,DIRECT
 DOMAIN-SUFFIX,meituan.com,DIRECT
@@ -238,6 +239,7 @@ DOMAIN-SUFFIX,oschina.net,DIRECT
 DOMAIN-SUFFIX,ouyaoxiazai.com,DIRECT
 DOMAIN-SUFFIX,panda.tv,DIRECT
 DOMAIN-SUFFIX,panduoduo.net,DIRECT
+DOMAIN-SUFFIX,pastebin.com,DIRECT
 DOMAIN-SUFFIX,pcbeta.com,DIRECT
 DOMAIN-SUFFIX,pchome.net,DIRECT
 DOMAIN-SUFFIX,pexels.com,DIRECT
