--- a/rules.conf
+++ b/rules.conf
@@ -111,6 +111,7 @@ DOMAIN-SUFFIX,ctrip.com,DIRECT
 DOMAIN-SUFFIX,cyol.com,DIRECT
 DOMAIN-SUFFIX,damengxiang.me,DIRECT
 DOMAIN-SUFFIX,dangdang.com,DIRECT
+DOMAIN-SUFFIX,dcloud.io,DIRECT
 DOMAIN-SUFFIX,ddrk.me,DIRECT
 DOMAIN-SUFFIX,deppon.com,DIRECT
 DOMAIN-SUFFIX,dianping.com,DIRECT
