--- a/rules.conf
+++ b/rules.conf
@@ -228,6 +228,7 @@ DOMAIN-SUFFIX,mmstat.com,DIRECT
 DOMAIN-SUFFIX,mob.com,DIRECT
 DOMAIN-SUFFIX,mobike.com,DIRECT
 DOMAIN-SUFFIX,mop.com,DIRECT
+DOMAIN-SUFFIX,msstatic.com,DIRECT
 DOMAIN-SUFFIX,mtime.com,DIRECT
 DOMAIN-SUFFIX,myapp.com,DIRECT
 DOMAIN-SUFFIX,mydrivers.com,DIRECT
