--- a/rules.conf
+++ b/rules.conf
@@ -125,6 +125,7 @@ DOMAIN-SUFFIX,douyu.com,DIRECT
 DOMAIN-SUFFIX,doyoudo.com,DIRECT
 DOMAIN-SUFFIX,drivergenius.com,DIRECT
 DOMAIN-SUFFIX,duowan.com,DIRECT
+DOMAIN-SUFFIX,e-digitalartery.com,DIRECT
 DOMAIN-SUFFIX,eastday.com,DIRECT
 DOMAIN-SUFFIX,ecitic.com,DIRECT
 DOMAIN-SUFFIX,ele.me,DIRECT
