--- a/rules.conf
+++ b/rules.conf
@@ -357,6 +357,7 @@ DOMAIN-SUFFIX,yundaex.com,DIRECT
 DOMAIN-SUFFIX,yuque.com,DIRECT
 DOMAIN-SUFFIX,yw11.com,DIRECT
 DOMAIN-SUFFIX,yy.com,DIRECT
+DOMAIN-SUFFIX,zbj.com,DIRECT
 DOMAIN-SUFFIX,zdic.net,DIRECT
 DOMAIN-SUFFIX,zhanqi.tv,DIRECT
 DOMAIN-SUFFIX,zhaopin.com,DIRECT
