--- a/rules.conf
+++ b/rules.conf
@@ -202,7 +202,9 @@ DOMAIN-SUFFIX,kuaishou.com,DIRECT
 DOMAIN-SUFFIX,kugou.com,DIRECT
 DOMAIN-SUFFIX,lanhuapp.com,DIRECT
 DOMAIN-SUFFIX,laozuo.org,DIRECT
+DOMAIN-SUFFIX,laravel-admin.org,DIRECT
 DOMAIN-SUFFIX,le.com,DIRECT
+DOMAIN-SUFFIX,learnku.com,DIRECT
 DOMAIN-SUFFIX,liangxinyao.com,DIRECT
 DOMAIN-SUFFIX,lianjia.com,DIRECT
 DOMAIN-SUFFIX,liepin.com,DIRECT
@@ -246,7 +248,6 @@ DOMAIN-SUFFIX,pcbeta.com,DIRECT
 DOMAIN-SUFFIX,pchome.net,DIRECT
 DOMAIN-SUFFIX,pexels.com,DIRECT
 DOMAIN-SUFFIX,pianbar.com,DIRECT
-DOMAIN-SUFFIX,pianyuan.la,DIRECT
 DOMAIN-SUFFIX,pingan.com,DIRECT
 DOMAIN-SUFFIX,pluwen.com,DIRECT
 DOMAIN-SUFFIX,pps.tv,DIRECT
@@ -265,6 +266,7 @@ DOMAIN-SUFFIX,qy.net,DIRECT
 DOMAIN-SUFFIX,qyer.com,DIRECT
 DOMAIN-SUFFIX,renren.com,DIRECT
 DOMAIN-SUFFIX,rfchost.com,DIRECT
+DOMAIN-SUFFIX,ruanyifeng.com,DIRECT
 DOMAIN-SUFFIX,runoob.com,DIRECT
 DOMAIN-SUFFIX,sc115.com,DIRECT
 DOMAIN-SUFFIX,sf-express.com,DIRECT
@@ -340,6 +342,7 @@ DOMAIN-SUFFIX,xin.com,DIRECT
 DOMAIN-SUFFIX,xinhuanet.com,DIRECT
 DOMAIN-SUFFIX,xitongzhijia.net,DIRECT
 DOMAIN-SUFFIX,xuexili.com,DIRECT
+DOMAIN-SUFFIX,xueyuanjun.com,DIRECT
 DOMAIN-SUFFIX,xunlei.com,DIRECT
 DOMAIN-SUFFIX,xywy.com,DIRECT
 DOMAIN-SUFFIX,yandex.ru,DIRECT
