--- a/rules.conf
+++ b/rules.conf
@@ -277,6 +277,7 @@ DOMAIN-SUFFIX,sina.com,DIRECT
 DOMAIN-SUFFIX,skycn.com,DIRECT
 DOMAIN-SUFFIX,slack.com,DIRECT
 DOMAIN-SUFFIX,smartisan.com,DIRECT
+DOMAIN-SUFFIX,smxs.com,DIRECT
 DOMAIN-SUFFIX,smzdm.com,DIRECT
 DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,so.com,DIRECT
