--- a/rules.conf
+++ b/rules.conf
@@ -234,6 +234,7 @@ DOMAIN-SUFFIX,msstatic.com,DIRECT
 DOMAIN-SUFFIX,mtime.com,DIRECT
 DOMAIN-SUFFIX,myapp.com,DIRECT
 DOMAIN-SUFFIX,mydrivers.com,DIRECT
+DOMAIN-SUFFIX,mzi8.com,DIRECT
 DOMAIN-SUFFIX,nanrenwo.net,DIRECT
 DOMAIN-SUFFIX,netease.com,DIRECT
 DOMAIN-SUFFIX,ngacn.cc,DIRECT
