--- a/rules.conf
+++ b/rules.conf
@@ -233,6 +233,7 @@ DOMAIN-SUFFIX,mobike.com,DIRECT
 DOMAIN-SUFFIX,mop.com,DIRECT
 DOMAIN-SUFFIX,msstatic.com,DIRECT
 DOMAIN-SUFFIX,mtime.com,DIRECT
+DOMAIN-SUFFIX,mxhichina,DIRECT
 DOMAIN-SUFFIX,myapp.com,DIRECT
 DOMAIN-SUFFIX,mydrivers.com,DIRECT
 DOMAIN-SUFFIX,mzi8.com,DIRECT
