--- a/rules.conf
+++ b/rules.conf
@@ -75,6 +75,7 @@ DOMAIN-SUFFIX,baomihua.com,DIRECT
 DOMAIN-SUFFIX,bejson.com,DIRECT
 DOMAIN-SUFFIX,bidchance.com,DIRECT
 DOMAIN-SUFFIX,bilibili.com,DIRECT
+DOMAIN-SUFFIX,bilivideo.com,DIRECT
 DOMAIN-SUFFIX,bing.com,DIRECT
 DOMAIN-SUFFIX,bitauto.com,DIRECT
 DOMAIN-SUFFIX,bjcathay.com,DIRECT
