--- a/rules.conf
+++ b/rules.conf
@@ -329,6 +329,7 @@ DOMAIN-SUFFIX,wandoujia.com,DIRECT
 DOMAIN-SUFFIX,webkaka.com,DIRECT
 DOMAIN-SUFFIX,wechat.com,DIRECT
 DOMAIN-SUFFIX,weibo.com,DIRECT
+DOMAIN-SUFFIX,weibocdn.com,DIRECT
 DOMAIN-SUFFIX,weidian.com,DIRECT
 DOMAIN-SUFFIX,weiyun.com,DIRECT
 DOMAIN-SUFFIX,wendangku.net,DIRECT
