--- a/rules.conf
+++ b/rules.conf
@@ -62,6 +62,7 @@ DOMAIN-SUFFIX,alpha.wallhaven.cc,DIRECT
 DOMAIN-SUFFIX,amap.com,DIRECT
 DOMAIN-SUFFIX,amemv.com,DIRECT
 DOMAIN-SUFFIX,anjuke.com,DIRECT
+DOMAIN-SUFFIX,aoqijiaoyu.com,DIRECT
 DOMAIN-SUFFIX,aozhuanyun.com,DIRECT
 DOMAIN-SUFFIX,appadhoc.com,DIRECT
 DOMAIN-SUFFIX,asklib.com,DIRECT
@@ -128,6 +129,7 @@ DOMAIN-SUFFIX,drivergenius.com,DIRECT
 DOMAIN-SUFFIX,duowan.com,DIRECT
 DOMAIN-SUFFIX,e-digitalartery.com,DIRECT
 DOMAIN-SUFFIX,eastday.com,DIRECT
+DOMAIN-SUFFIX,ebook.cdict.info,DIRECT
 DOMAIN-SUFFIX,ecitic.com,DIRECT
 DOMAIN-SUFFIX,ele.me,DIRECT
 DOMAIN-SUFFIX,elemecdn.com,DIRECT
@@ -155,12 +157,12 @@ DOMAIN-SUFFIX,growingio.com,DIRECT
 DOMAIN-SUFFIX,guazi.com,DIRECT
 DOMAIN-SUFFIX,guokr.com,DIRECT
 DOMAIN-SUFFIX,gushiwen.org,DIRECT
+DOMAIN-SUFFIX,hanmarketing.com.au,DIRECT
 DOMAIN-SUFFIX,hao123.com,DIRECT
 DOMAIN-SUFFIX,hdslb.com,DIRECT
 DOMAIN-SUFFIX,heikeyun.net,DIRECT
 DOMAIN-SUFFIX,hexun.com,DIRECT
 DOMAIN-SUFFIX,hnair.com,DIRECT
-DOMAIN-SUFFIX,hostloc.com,DIRECT
 DOMAIN-SUFFIX,huaban.com,DIRECT
 DOMAIN-SUFFIX,huawei.com,DIRECT
 DOMAIN-SUFFIX,huaweicloud.com,DIRECT
@@ -259,6 +261,7 @@ DOMAIN-SUFFIX,ppsport.com,DIRECT
 DOMAIN-SUFFIX,pptv.com,DIRECT
 DOMAIN-SUFFIX,processon.com,DIRECT
 DOMAIN-SUFFIX,pstatp.com,DIRECT
+DOMAIN-SUFFIX,python.ctolib.com,DIRECT
 DOMAIN-SUFFIX,qidian.com,DIRECT
 DOMAIN-SUFFIX,qiku.com,DIRECT
 DOMAIN-SUFFIX,qiniu.com,DIRECT
@@ -270,7 +273,6 @@ DOMAIN-SUFFIX,qy.net,DIRECT
 DOMAIN-SUFFIX,qyer.com,DIRECT
 DOMAIN-SUFFIX,renren.com,DIRECT
 DOMAIN-SUFFIX,rfchost.com,DIRECT
-DOMAIN-SUFFIX,ruanyifeng.com,DIRECT
 DOMAIN-SUFFIX,runoob.com,DIRECT
 DOMAIN-SUFFIX,sc115.com,DIRECT
 DOMAIN-SUFFIX,sf-express.com,DIRECT
@@ -303,6 +305,7 @@ DOMAIN-SUFFIX,tencent.com,DIRECT
 DOMAIN-SUFFIX,tianyancha.com,DIRECT
 DOMAIN-SUFFIX,tingyun.com,DIRECT
 DOMAIN-SUFFIX,tmall.com,DIRECT
+DOMAIN-SUFFIX,tool.c7sky.com,DIRECT
 DOMAIN-SUFFIX,tool.lu,DIRECT
 DOMAIN-SUFFIX,torrentz2.eu,DIRECT
 DOMAIN-SUFFIX,torrentz2.is,DIRECT
@@ -375,7 +378,6 @@ DOMAIN-SUFFIX,zhibo8.cc,DIRECT
 DOMAIN-SUFFIX,zhihu.com,DIRECT
 DOMAIN-SUFFIX,zhipin.com,DIRECT
 DOMAIN-SUFFIX,zhiyoo.com,DIRECT
-DOMAIN-SUFFIX,zimuku.la,DIRECT
 DOMAIN-SUFFIX,zto.com,DIRECT
 DOMAIN-SUFFIX,zybang.com,DIRECT
 FINAL,PROXY
