--- a/rules.conf
+++ b/rules.conf
@@ -73,6 +73,8 @@ DOMAIN-SUFFIX,baidu.com,DIRECT
 DOMAIN-SUFFIX,baike.com,DIRECT
 DOMAIN-SUFFIX,bankofchina.com,DIRECT
 DOMAIN-SUFFIX,baomihua.com,DIRECT
+DOMAIN-SUFFIX,bdimg.com,DIRECT
+DOMAIN-SUFFIX,bdstatic.com,DIRECT
 DOMAIN-SUFFIX,bejson.com,DIRECT
 DOMAIN-SUFFIX,bidchance.com,DIRECT
 DOMAIN-SUFFIX,bilibili.com,DIRECT
