--- a/rules.conf
+++ b/rules.conf
@@ -58,6 +58,7 @@ DOMAIN-SUFFIX,alimama.com,DIRECT
 DOMAIN-SUFFIX,alipay.com,DIRECT
 DOMAIN-SUFFIX,alitrip.com,DIRECT
 DOMAIN-SUFFIX,aliyun.com,DIRECT
+DOMAIN-SUFFIX,aliyuncs.com,DIRECT
 DOMAIN-SUFFIX,alpha.wallhaven.cc,DIRECT
 DOMAIN-SUFFIX,amap.com,DIRECT
 DOMAIN-SUFFIX,amemv.com,DIRECT
