--- a/rules.conf
+++ b/rules.conf
@@ -11,6 +11,7 @@ IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.160.0/20,PROXY,no-resolve
+DOMAIN,61.185.220.174,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
@@ -26,23 +27,31 @@ DOMAIN-SUFFIX,178.com,DIRECT
 DOMAIN-SUFFIX,1ppt.com,DIRECT
 DOMAIN-SUFFIX,1ting.com,DIRECT
 DOMAIN-SUFFIX,21cn.com,DIRECT
+DOMAIN-SUFFIX,300hu.com,DIRECT
 DOMAIN-SUFFIX,3322.cc,DIRECT
+DOMAIN-SUFFIX,3366.com,DIRECT
+DOMAIN-SUFFIX,3366img.com,DIRECT
+DOMAIN-SUFFIX,360buyimg.com,DIRECT
 DOMAIN-SUFFIX,360doc.com,DIRECT
 DOMAIN-SUFFIX,36kr.com,DIRECT
 DOMAIN-SUFFIX,39.net,DIRECT
 DOMAIN-SUFFIX,3dmgame.com,DIRECT
 DOMAIN-SUFFIX,4399.com,DIRECT
+DOMAIN-SUFFIX,51.la,DIRECT
 DOMAIN-SUFFIX,51cto.com,DIRECT
 DOMAIN-SUFFIX,51test.net,DIRECT
 DOMAIN-SUFFIX,51wnl-cq.com,DIRECT
 DOMAIN-SUFFIX,56.com,DIRECT
 DOMAIN-SUFFIX,58.com,DIRECT
+DOMAIN-SUFFIX,58che.com,DIRECT
 DOMAIN-SUFFIX,58pic.com,DIRECT
 DOMAIN-SUFFIX,64clouds.com,DIRECT
 DOMAIN-SUFFIX,699pic.com,DIRECT
 DOMAIN-SUFFIX,6k6g.com,DIRECT
 DOMAIN-SUFFIX,7down.com,DIRECT
+DOMAIN-SUFFIX,7fresh.com,DIRECT
 DOMAIN-SUFFIX,800bestex.com,DIRECT
+DOMAIN-SUFFIX,8686c.com,DIRECT
 DOMAIN-SUFFIX,911cha.com,DIRECT
 DOMAIN-SUFFIX,91flac.com,DIRECT
 DOMAIN-SUFFIX,99bill.com,DIRECT
@@ -52,28 +61,38 @@ DOMAIN-SUFFIX,acgvideo.com,DIRECT
 DOMAIN-SUFFIX,ali213.net,DIRECT
 DOMAIN-SUFFIX,aliapp.org,DIRECT
 DOMAIN-SUFFIX,alibaba.com,DIRECT
+DOMAIN-SUFFIX,alibaba-inc.com,DIRECT
+DOMAIN-SUFFIX,alibabacloud.com,DIRECT
+DOMAIN-SUFFIX,alibabausercontent.com,DIRECT
 DOMAIN-SUFFIX,alicdn.com,DIRECT
 DOMAIN-SUFFIX,alidns.com,DIRECT
 DOMAIN-SUFFIX,alimama.com,DIRECT
 DOMAIN-SUFFIX,alipay.com,DIRECT
+DOMAIN-SUFFIX,alipayobjects.com,DIRECT
+DOMAIN-SUFFIX,alipcsec.com,DIRECT
 DOMAIN-SUFFIX,alitrip.com,DIRECT
 DOMAIN-SUFFIX,aliyun.com,DIRECT
 DOMAIN-SUFFIX,aliyuncs.com,DIRECT
-DOMAIN-SUFFIX,alpha.wallhaven.cc,DIRECT
 DOMAIN-SUFFIX,amap.com,DIRECT
 DOMAIN-SUFFIX,amemv.com,DIRECT
 DOMAIN-SUFFIX,anjuke.com,DIRECT
+DOMAIN-SUFFIX,anquan.info,DIRECT
 DOMAIN-SUFFIX,aoqijiaoyu.com,DIRECT
 DOMAIN-SUFFIX,aozhuanyun.com,DIRECT
 DOMAIN-SUFFIX,appadhoc.com,DIRECT
+DOMAIN-SUFFIX,appsimg.com,DIRECT
+DOMAIN-SUFFIX,appvipshop.com,DIRECT
 DOMAIN-SUFFIX,asklib.com,DIRECT
 DOMAIN-SUFFIX,aso100.com,DIRECT
+DOMAIN-SUFFIX,atianqi.com,DIRECT
 DOMAIN-SUFFIX,autonavi.com,DIRECT
 DOMAIN-SUFFIX,babybus.com,DIRECT
 DOMAIN-SUFFIX,baidu.com,DIRECT
 DOMAIN-SUFFIX,baike.com,DIRECT
+DOMAIN-SUFFIX,baitiao.com,DIRECT
 DOMAIN-SUFFIX,bankofchina.com,DIRECT
 DOMAIN-SUFFIX,baomihua.com,DIRECT
+DOMAIN-SUFFIX,bcebos.com,DIRECT
 DOMAIN-SUFFIX,bdimg.com,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,DIRECT
 DOMAIN-SUFFIX,bejson.com,DIRECT
@@ -83,19 +102,25 @@ DOMAIN-SUFFIX,bilivideo.com,DIRECT
 DOMAIN-SUFFIX,bing.com,DIRECT
 DOMAIN-SUFFIX,bitauto.com,DIRECT
 DOMAIN-SUFFIX,bjcathay.com,DIRECT
+DOMAIN-SUFFIX,bootcss.com,DIRECT
+DOMAIN-SUFFIX,bosszhipin.com,DIRECT
+DOMAIN-SUFFIX,c7sky.com,DIRECT
 DOMAIN-SUFFIX,cainiao.com,DIRECT
 DOMAIN-SUFFIX,camera360.com,DIRECT
 DOMAIN-SUFFIX,cankaoxiaoxi.com,DIRECT
 DOMAIN-SUFFIX,ccb.com,DIRECT
 DOMAIN-SUFFIX,cctv.com,DIRECT
+DOMAIN-SUFFIX,cdntips.net,DIRECT
 DOMAIN-SUFFIX,ceair.com,DIRECT
 DOMAIN-SUFFIX,cgtn.com,DIRECT
 DOMAIN-SUFFIX,che168.com,DIRECT
 DOMAIN-SUFFIX,china.com,DIRECT
 DOMAIN-SUFFIX,chinadsl.net,DIRECT
 DOMAIN-SUFFIX,chinaz.com,DIRECT
+DOMAIN-SUFFIX,chinaz.net,DIRECT
 DOMAIN-SUFFIX,chiphell.com,DIRECT
 DOMAIN-SUFFIX,chongdiantou.com,DIRECT
+DOMAIN-SUFFIX,cibntv.net,DIRECT
 DOMAIN-SUFFIX,citicbank.com,DIRECT
 DOMAIN-SUFFIX,clouddn.com,DIRECT
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
@@ -103,6 +128,7 @@ DOMAIN-SUFFIX,cn,DIRECT
 DOMAIN-SUFFIX,cnblogs.com,DIRECT
 DOMAIN-SUFFIX,cncrk.com,DIRECT
 DOMAIN-SUFFIX,cnki.net,DIRECT
+DOMAIN-SUFFIX,cnmstl.net,DIRECT
 DOMAIN-SUFFIX,cnzz.com,DIRECT
 DOMAIN-SUFFIX,cocoachina.com,DIRECT
 DOMAIN-SUFFIX,cowtransfer.com,DIRECT
@@ -116,30 +142,39 @@ DOMAIN-SUFFIX,ctrip.com,DIRECT
 DOMAIN-SUFFIX,cyol.com,DIRECT
 DOMAIN-SUFFIX,damengxiang.me,DIRECT
 DOMAIN-SUFFIX,dangdang.com,DIRECT
+DOMAIN-SUFFIX,daojia.com,DIRECT
 DOMAIN-SUFFIX,dcloud.io,DIRECT
 DOMAIN-SUFFIX,ddrk.me,DIRECT
 DOMAIN-SUFFIX,deppon.com,DIRECT
 DOMAIN-SUFFIX,dianping.com,DIRECT
 DOMAIN-SUFFIX,didiglobal.com,DIRECT
+DOMAIN-SUFFIX,digitalartery.com.au,DIRECT
+DOMAIN-SUFFIX,dingtalk.com,DIRECT
+DOMAIN-SUFFIX,dingxiang-inc.com,DIRECT
 DOMAIN-SUFFIX,doc88.com,DIRECT
 DOMAIN-SUFFIX,dongqiudi.com,DIRECT
 DOMAIN-SUFFIX,douban.com,DIRECT
+DOMAIN-SUFFIX,douban.fm,DIRECT
 DOMAIN-SUFFIX,doubanio.com,DIRECT
 DOMAIN-SUFFIX,douyin.com,DIRECT
 DOMAIN-SUFFIX,douyu.com,DIRECT
+DOMAIN-SUFFIX,douyuscdn.com,DIRECT
 DOMAIN-SUFFIX,doyoudo.com,DIRECT
 DOMAIN-SUFFIX,drivergenius.com,DIRECT
 DOMAIN-SUFFIX,duowan.com,DIRECT
-DOMAIN-SUFFIX,e-digitalartery.com,DIRECT
+DOMAIN-SUFFIX,easebar.com,DIRECT
 DOMAIN-SUFFIX,eastday.com,DIRECT
-DOMAIN-SUFFIX,ebook.cdict.info,DIRECT
 DOMAIN-SUFFIX,ecitic.com,DIRECT
+DOMAIN-SUFFIX,edgesrv.com,DIRECT
+DOMAIN-SUFFIX,effirst.com,DIRECT
 DOMAIN-SUFFIX,ele.me,DIRECT
 DOMAIN-SUFFIX,elemecdn.com,DIRECT
 DOMAIN-SUFFIX,epubee.com,DIRECT
-DOMAIN-SUFFIX,ergestudio.cf,DIRECT
 DOMAIN-SUFFIX,etao.com,DIRECT
+DOMAIN-SUFFIX,etoote.com,DIRECT
 DOMAIN-SUFFIX,eudic.net,DIRECT
+DOMAIN-SUFFIX,fadada.com,DIRECT
+DOMAIN-SUFFIX,fancyapi.com,DIRECT
 DOMAIN-SUFFIX,fang.com,DIRECT
 DOMAIN-SUFFIX,fangdd.com,DIRECT
 DOMAIN-SUFFIX,fanli.com,DIRECT
@@ -149,6 +184,7 @@ DOMAIN-SUFFIX,feng.com,DIRECT
 DOMAIN-SUFFIX,fengniao.com,DIRECT
 DOMAIN-SUFFIX,gamersky.com,DIRECT
 DOMAIN-SUFFIX,ganji.com,DIRECT
+DOMAIN-SUFFIX,ganjistatic1.com,DIRECT
 DOMAIN-SUFFIX,gaodun.com,DIRECT
 DOMAIN-SUFFIX,gcorelabs.com,DIRECT
 DOMAIN-SUFFIX,geetest.com,DIRECT
@@ -157,24 +193,30 @@ DOMAIN-SUFFIX,gifhome.com,DIRECT
 DOMAIN-SUFFIX,gratisography.com,DIRECT
 DOMAIN-SUFFIX,greenxf.com,DIRECT
 DOMAIN-SUFFIX,growingio.com,DIRECT
+DOMAIN-SUFFIX,gtimg.com,DIRECT
 DOMAIN-SUFFIX,guazi.com,DIRECT
 DOMAIN-SUFFIX,guokr.com,DIRECT
 DOMAIN-SUFFIX,gushiwen.org,DIRECT
 DOMAIN-SUFFIX,hanmarketing.com.au,DIRECT
 DOMAIN-SUFFIX,hao123.com,DIRECT
+DOMAIN-SUFFIX,hao123img.com,DIRECT
 DOMAIN-SUFFIX,hdslb.com,DIRECT
 DOMAIN-SUFFIX,heikeyun.net,DIRECT
+DOMAIN-SUFFIX,hellorf.com,DIRECT
 DOMAIN-SUFFIX,hexun.com,DIRECT
 DOMAIN-SUFFIX,hnair.com,DIRECT
 DOMAIN-SUFFIX,huaban.com,DIRECT
+DOMAIN-SUFFIX,huashu-inc.com,DIRECT
 DOMAIN-SUFFIX,huawei.com,DIRECT
 DOMAIN-SUFFIX,huaweicloud.com,DIRECT
 DOMAIN-SUFFIX,hudong.com,DIRECT
 DOMAIN-SUFFIX,huofar.com,DIRECT
 DOMAIN-SUFFIX,hupu.com,DIRECT
 DOMAIN-SUFFIX,huya.com,DIRECT
+DOMAIN-SUFFIX,ibaotu.com,DIRECT
 DOMAIN-SUFFIX,icourse163.org,DIRECT
 DOMAIN-SUFFIX,idc.wiki,DIRECT
+DOMAIN-SUFFIX,idqqimg.com,DIRECT
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
 DOMAIN-SUFFIX,ifdream.net,DIRECT
 DOMAIN-SUFFIX,ifeng.com,DIRECT
@@ -182,6 +224,7 @@ DOMAIN-SUFFIX,iflyrec.com,DIRECT
 DOMAIN-SUFFIX,iflytek.com,DIRECT
 DOMAIN-SUFFIX,iguoguo.net,DIRECT
 DOMAIN-SUFFIX,ikanfan.com,DIRECT
+DOMAIN-SUFFIX,imgcdc.com,DIRECT
 DOMAIN-SUFFIX,imgix.net,DIRECT
 DOMAIN-SUFFIX,imooc.com,DIRECT
 DOMAIN-SUFFIX,infoq.com,DIRECT
@@ -189,21 +232,31 @@ DOMAIN-SUFFIX,ip138.com,DIRECT
 DOMAIN-SUFFIX,ipip.net,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyipic.com,DIRECT
+DOMAIN-SUFFIX,irs01.com,DIRECT
 DOMAIN-SUFFIX,it168.com,DIRECT
 DOMAIN-SUFFIX,itpub.net,DIRECT
 DOMAIN-SUFFIX,ixdzs.com,DIRECT
 DOMAIN-SUFFIX,ixigua.com,DIRECT
 DOMAIN-SUFFIX,jb51.net,DIRECT
+DOMAIN-SUFFIX,jcloud.com,DIRECT
 DOMAIN-SUFFIX,jd.com,DIRECT
+DOMAIN-SUFFIX,jd.hk,DIRECT
+DOMAIN-SUFFIX,jdbusiness.com,DIRECT
+DOMAIN-SUFFIX,jdcloud.com,DIRECT
 DOMAIN-SUFFIX,jdpay.com,DIRECT
+DOMAIN-SUFFIX,jdwl.com,DIRECT
 DOMAIN-SUFFIX,jianguoyun.com,DIRECT
 DOMAIN-SUFFIX,jianke.com,DIRECT
 DOMAIN-SUFFIX,jianshu.com,DIRECT
+DOMAIN-SUFFIX,jiathis.com,DIRECT
 DOMAIN-SUFFIX,jiayuan.com,DIRECT
+DOMAIN-SUFFIX,jingxi.com,DIRECT
+DOMAIN-SUFFIX,jkcsjd.com,DIRECT
 DOMAIN-SUFFIX,kaola.com,DIRECT
 DOMAIN-SUFFIX,ke.com,DIRECT
 DOMAIN-SUFFIX,kekenet.com,DIRECT
 DOMAIN-SUFFIX,kf5.com,DIRECT
+DOMAIN-SUFFIX,ks-cdn.com,DIRECT
 DOMAIN-SUFFIX,kuaidi100.com,DIRECT
 DOMAIN-SUFFIX,kuaishou.com,DIRECT
 DOMAIN-SUFFIX,kugou.com,DIRECT
@@ -212,9 +265,12 @@ DOMAIN-SUFFIX,laozuo.org,DIRECT
 DOMAIN-SUFFIX,laravel-admin.org,DIRECT
 DOMAIN-SUFFIX,le.com,DIRECT
 DOMAIN-SUFFIX,learnku.com,DIRECT
+DOMAIN-SUFFIX,leyunge.com,DIRECT
+DOMAIN-SUFFIX,lf127.net,DIRECT
 DOMAIN-SUFFIX,liangxinyao.com,DIRECT
 DOMAIN-SUFFIX,lianjia.com,DIRECT
 DOMAIN-SUFFIX,liepin.com,DIRECT
+DOMAIN-SUFFIX,ljcdn.com,DIRECT
 DOMAIN-SUFFIX,lofter.com,DIRECT
 DOMAIN-SUFFIX,longzhu.com,DIRECT
 DOMAIN-SUFFIX,longzhulive.com,DIRECT
@@ -236,12 +292,15 @@ DOMAIN-SUFFIX,miwifi.com,DIRECT
 DOMAIN-SUFFIX,mmstat.com,DIRECT
 DOMAIN-SUFFIX,mob.com,DIRECT
 DOMAIN-SUFFIX,mobike.com,DIRECT
+DOMAIN-SUFFIX,mogucdn.com,DIRECT
+DOMAIN-SUFFIX,mokahr.com,DIRECT
 DOMAIN-SUFFIX,mop.com,DIRECT
 DOMAIN-SUFFIX,msstatic.com,DIRECT
 DOMAIN-SUFFIX,mtime.com,DIRECT
-DOMAIN-SUFFIX,mxhichina,DIRECT
+DOMAIN-SUFFIX,mxhichina.com,DIRECT
 DOMAIN-SUFFIX,myapp.com,DIRECT
 DOMAIN-SUFFIX,mydrivers.com,DIRECT
+DOMAIN-SUFFIX,myqcloud.com,DIRECT
 DOMAIN-SUFFIX,mzi8.com,DIRECT
 DOMAIN-SUFFIX,nanrenwo.net,DIRECT
 DOMAIN-SUFFIX,netease.com,DIRECT
@@ -249,7 +308,9 @@ DOMAIN-SUFFIX,ngacn.cc,DIRECT
 DOMAIN-SUFFIX,nuomi.com,DIRECT
 DOMAIN-SUFFIX,onlinedown.net,DIRECT
 DOMAIN-SUFFIX,oschina.net,DIRECT
+DOMAIN-SUFFIX,ourdvsss.com,DIRECT
 DOMAIN-SUFFIX,ouyaoxiazai.com,DIRECT
+DOMAIN-SUFFIX,paipai.com,DIRECT
 DOMAIN-SUFFIX,panda.tv,DIRECT
 DOMAIN-SUFFIX,panduoduo.net,DIRECT
 DOMAIN-SUFFIX,pastebin.com,DIRECT
@@ -259,23 +320,33 @@ DOMAIN-SUFFIX,pexels.com,DIRECT
 DOMAIN-SUFFIX,pianbar.com,DIRECT
 DOMAIN-SUFFIX,pingan.com,DIRECT
 DOMAIN-SUFFIX,pluwen.com,DIRECT
+DOMAIN-SUFFIX,ppio.cloud,DIRECT
+DOMAIN-SUFFIX,pplive.com,DIRECT
 DOMAIN-SUFFIX,pps.tv,DIRECT
 DOMAIN-SUFFIX,ppsport.com,DIRECT
 DOMAIN-SUFFIX,pptv.com,DIRECT
 DOMAIN-SUFFIX,processon.com,DIRECT
 DOMAIN-SUFFIX,pstatp.com,DIRECT
-DOMAIN-SUFFIX,python.ctolib.com,DIRECT
+DOMAIN-SUFFIX,qbox.me,DIRECT
+DOMAIN-SUFFIX,qcloud.com,DIRECT
+DOMAIN-SUFFIX,qcloudcdn.com,DIRECT
 DOMAIN-SUFFIX,qidian.com,DIRECT
+DOMAIN-SUFFIX,qiecdn.com,DIRECT
 DOMAIN-SUFFIX,qiku.com,DIRECT
 DOMAIN-SUFFIX,qiniu.com,DIRECT
+DOMAIN-SUFFIX,qiniu.io,DIRECT
 DOMAIN-SUFFIX,qiushibaike.com,DIRECT
 DOMAIN-SUFFIX,qiuziti.com,DIRECT
+DOMAIN-SUFFIX,qiyukf.com,DIRECT
 DOMAIN-SUFFIX,qq.com,DIRECT
 DOMAIN-SUFFIX,qunar.com,DIRECT
+DOMAIN-SUFFIX,qunliao.info,DIRECT
 DOMAIN-SUFFIX,qy.net,DIRECT
 DOMAIN-SUFFIX,qyer.com,DIRECT
+DOMAIN-SUFFIX,recaptcha.net,DIRECT
 DOMAIN-SUFFIX,renren.com,DIRECT
 DOMAIN-SUFFIX,rfchost.com,DIRECT
+DOMAIN-SUFFIX,rtbasia.com,DIRECT
 DOMAIN-SUFFIX,runoob.com,DIRECT
 DOMAIN-SUFFIX,sc115.com,DIRECT
 DOMAIN-SUFFIX,sf-express.com,DIRECT
@@ -286,37 +357,46 @@ DOMAIN-SUFFIX,sina.com,DIRECT
 DOMAIN-SUFFIX,skycn.com,DIRECT
 DOMAIN-SUFFIX,slack.com,DIRECT
 DOMAIN-SUFFIX,smartisan.com,DIRECT
+DOMAIN-SUFFIX,smtcdns.com,DIRECT
+DOMAIN-SUFFIX,smtcdns.net,DIRECT
 DOMAIN-SUFFIX,smxs.com,DIRECT
 DOMAIN-SUFFIX,smzdm.com,DIRECT
 DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,so.com,DIRECT
 DOMAIN-SUFFIX,sobaidupan.com,DIRECT
+DOMAIN-SUFFIX,sobot.com,DIRECT
 DOMAIN-SUFFIX,sogou.com,DIRECT
 DOMAIN-SUFFIX,sohu.com,DIRECT
 DOMAIN-SUFFIX,soku.com,DIRECT
 DOMAIN-SUFFIX,soso.com,DIRECT
 DOMAIN-SUFFIX,sosoyunpan.com,DIRECT
 DOMAIN-SUFFIX,soyunpan.com,DIRECT
+DOMAIN-SUFFIX,spdydns.com,DIRECT
 DOMAIN-SUFFIX,sspai.com,DIRECT
 DOMAIN-SUFFIX,ssports.com,DIRECT
+DOMAIN-SUFFIX,staticfile.org,DIRECT
 DOMAIN-SUFFIX,suning.com,DIRECT
 DOMAIN-SUFFIX,talkingdata.com,DIRECT
+DOMAIN-SUFFIX,tankeai.com,DIRECT
 DOMAIN-SUFFIX,taobao.com,DIRECT
 DOMAIN-SUFFIX,taobaocdn.com,DIRECT
 DOMAIN-SUFFIX,taoche.com,DIRECT
+DOMAIN-SUFFIX,tbcache.com,DIRECT
 DOMAIN-SUFFIX,tencent.com,DIRECT
+DOMAIN-SUFFIX,tencentcs.com,DIRECT
+DOMAIN-SUFFIX,tenpay.com,DIRECT
 DOMAIN-SUFFIX,tianyancha.com,DIRECT
 DOMAIN-SUFFIX,tingyun.com,DIRECT
+DOMAIN-SUFFIX,tjjt360.com,DIRECT
 DOMAIN-SUFFIX,tmall.com,DIRECT
-DOMAIN-SUFFIX,tool.c7sky.com,DIRECT
+DOMAIN-SUFFIX,tongdun.net,DIRECT
 DOMAIN-SUFFIX,tool.lu,DIRECT
-DOMAIN-SUFFIX,torrentz2.eu,DIRECT
-DOMAIN-SUFFIX,torrentz2.is,DIRECT
 DOMAIN-SUFFIX,toutiao.com,DIRECT
 DOMAIN-SUFFIX,ttkdex.com,DIRECT
 DOMAIN-SUFFIX,tuchong.com,DIRECT
 DOMAIN-SUFFIX,tudou.com,DIRECT
 DOMAIN-SUFFIX,tuniu.com,DIRECT
+DOMAIN-SUFFIX,tutieshi.com,DIRECT
 DOMAIN-SUFFIX,tvmao.com,DIRECT
 DOMAIN-SUFFIX,uedna.com,DIRECT
 DOMAIN-SUFFIX,uisdc.com,DIRECT
@@ -327,22 +407,31 @@ DOMAIN-SUFFIX,uovz.com,DIRECT
 DOMAIN-SUFFIX,uuu9.com,DIRECT
 DOMAIN-SUFFIX,v2ex.com,DIRECT
 DOMAIN-SUFFIX,verycd.com,DIRECT
+DOMAIN-SUFFIX,videojj.com,DIRECT
 DOMAIN-SUFFIX,vip.com,DIRECT
+DOMAIN-SUFFIX,vipmro.com,DIRECT
+DOMAIN-SUFFIX,vipstatic.com,DIRECT
 DOMAIN-SUFFIX,visualhunt.com,DIRECT
 DOMAIN-SUFFIX,vmall.com,DIRECT
 DOMAIN-SUFFIX,voidcn.com,DIRECT
+DOMAIN-SUFFIX,vpimg2.com,DIRECT
+DOMAIN-SUFFIX,vpimg3.com,DIRECT
+DOMAIN-SUFFIX,vpimg4.com,DIRECT
 DOMAIN-SUFFIX,wandoujia.com,DIRECT
 DOMAIN-SUFFIX,webkaka.com,DIRECT
 DOMAIN-SUFFIX,wechat.com,DIRECT
 DOMAIN-SUFFIX,weibo.com,DIRECT
 DOMAIN-SUFFIX,weibocdn.com,DIRECT
 DOMAIN-SUFFIX,weidian.com,DIRECT
+DOMAIN-SUFFIX,weixin.com,DIRECT
+DOMAIN-SUFFIX,weixinbridge.com,DIRECT
 DOMAIN-SUFFIX,weiyun.com,DIRECT
 DOMAIN-SUFFIX,wendangku.net,DIRECT
 DOMAIN-SUFFIX,win4000.com,DIRECT
 DOMAIN-SUFFIX,wkzf.com,DIRECT
 DOMAIN-SUFFIX,womai.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
+DOMAIN-SUFFIX,wscdns.com,DIRECT
 DOMAIN-SUFFIX,xdowns.com,DIRECT
 DOMAIN-SUFFIX,xiami.com,DIRECT
 DOMAIN-SUFFIX,xiami.net,DIRECT
@@ -362,15 +451,19 @@ DOMAIN-SUFFIX,yangkeduo.com,DIRECT
 DOMAIN-SUFFIX,yeah.net,DIRECT
 DOMAIN-SUFFIX,yhd.com,DIRECT
 DOMAIN-SUFFIX,yicai.com,DIRECT
+DOMAIN-SUFFIX,yidun.com,DIRECT
 DOMAIN-SUFFIX,yihaocar.com,DIRECT
 DOMAIN-SUFFIX,yinyuetai.com,DIRECT
 DOMAIN-SUFFIX,yixia.com,DIRECT
+DOMAIN-SUFFIX,yiyaojd.com,DIRECT
 DOMAIN-SUFFIX,yizhibo.com,DIRECT
+DOMAIN-SUFFIX,ykimg.com,DIRECT
 DOMAIN-SUFFIX,youdao.com,DIRECT
 DOMAIN-SUFFIX,youku.com,DIRECT
 DOMAIN-SUFFIX,yundaex.com,DIRECT
 DOMAIN-SUFFIX,yuque.com,DIRECT
 DOMAIN-SUFFIX,yw11.com,DIRECT
+DOMAIN-SUFFIX,yximgs.com,DIRECT
 DOMAIN-SUFFIX,yy.com,DIRECT
 DOMAIN-SUFFIX,zbj.com,DIRECT
 DOMAIN-SUFFIX,zdic.net,DIRECT
@@ -379,6 +472,7 @@ DOMAIN-SUFFIX,zhaopin.com,DIRECT
 DOMAIN-SUFFIX,zhenai.com,DIRECT
 DOMAIN-SUFFIX,zhibo8.cc,DIRECT
 DOMAIN-SUFFIX,zhihu.com,DIRECT
+DOMAIN-SUFFIX,zhimg.com,DIRECT
 DOMAIN-SUFFIX,zhipin.com,DIRECT
 DOMAIN-SUFFIX,zhiyoo.com,DIRECT
 DOMAIN-SUFFIX,zto.com,DIRECT
