--- a/rules.conf
+++ b/rules.conf
@@ -2,7 +2,7 @@
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 127.0.0.0/8, *.local, captive.apple.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = 223.5.5.5
+dns-server = https://223.5.5.5/dns-query?
 ipv6 = false
 
 
@@ -80,6 +80,7 @@ DOMAIN-SUFFIX,anquan.info,DIRECT
 DOMAIN-SUFFIX,aoqijiaoyu.com,DIRECT
 DOMAIN-SUFFIX,aozhuanyun.com,DIRECT
 DOMAIN-SUFFIX,appadhoc.com,DIRECT
+DOMAIN-SUFFIX,apple886.com,DIRECT
 DOMAIN-SUFFIX,appsimg.com,DIRECT
 DOMAIN-SUFFIX,appvipshop.com,DIRECT
 DOMAIN-SUFFIX,asklib.com,DIRECT
@@ -248,6 +249,7 @@ DOMAIN-SUFFIX,jdwl.com,DIRECT
 DOMAIN-SUFFIX,jianguoyun.com,DIRECT
 DOMAIN-SUFFIX,jianke.com,DIRECT
 DOMAIN-SUFFIX,jianshu.com,DIRECT
+DOMAIN-SUFFIX,jianshu.io,DIRECT
 DOMAIN-SUFFIX,jiathis.com,DIRECT
 DOMAIN-SUFFIX,jiayuan.com,DIRECT
 DOMAIN-SUFFIX,jingxi.com,DIRECT
@@ -405,7 +407,6 @@ DOMAIN-SUFFIX,undraw.co,DIRECT
 DOMAIN-SUFFIX,unsplash.com,DIRECT
 DOMAIN-SUFFIX,uovz.com,DIRECT
 DOMAIN-SUFFIX,uuu9.com,DIRECT
-DOMAIN-SUFFIX,v2ex.com,DIRECT
 DOMAIN-SUFFIX,verycd.com,DIRECT
 DOMAIN-SUFFIX,videojj.com,DIRECT
 DOMAIN-SUFFIX,vip.com,DIRECT
@@ -442,6 +443,7 @@ DOMAIN-SUFFIX,xiazaizhijia.com,DIRECT
 DOMAIN-SUFFIX,xin.com,DIRECT
 DOMAIN-SUFFIX,xinhuanet.com,DIRECT
 DOMAIN-SUFFIX,xitongzhijia.net,DIRECT
+DOMAIN-SUFFIX,xitu.io,DIRECT
 DOMAIN-SUFFIX,xuexili.com,DIRECT
 DOMAIN-SUFFIX,xueyuanjun.com,DIRECT
 DOMAIN-SUFFIX,xunlei.com,DIRECT
