--- a/rules.conf
+++ b/rules.conf
@@ -52,6 +52,7 @@ DOMAIN-SUFFIX,7down.com,DIRECT
 DOMAIN-SUFFIX,7fresh.com,DIRECT
 DOMAIN-SUFFIX,800bestex.com,DIRECT
 DOMAIN-SUFFIX,8686c.com,DIRECT
+DOMAIN-SUFFIX,91.com,DIRECT
 DOMAIN-SUFFIX,911cha.com,DIRECT
 DOMAIN-SUFFIX,91flac.com,DIRECT
 DOMAIN-SUFFIX,99bill.com,DIRECT
@@ -190,6 +191,7 @@ DOMAIN-SUFFIX,gaodun.com,DIRECT
 DOMAIN-SUFFIX,gcorelabs.com,DIRECT
 DOMAIN-SUFFIX,geetest.com,DIRECT
 DOMAIN-SUFFIX,getui.com,DIRECT
+DOMAIN-SUFFIX,ggpht.com,DIRECT
 DOMAIN-SUFFIX,gifhome.com,DIRECT
 DOMAIN-SUFFIX,gratisography.com,DIRECT
 DOMAIN-SUFFIX,greenxf.com,DIRECT
@@ -258,6 +260,8 @@ DOMAIN-SUFFIX,kaola.com,DIRECT
 DOMAIN-SUFFIX,ke.com,DIRECT
 DOMAIN-SUFFIX,kekenet.com,DIRECT
 DOMAIN-SUFFIX,kf5.com,DIRECT
+DOMAIN-SUFFIX,kgimg.com,DIRECT
+DOMAIN-SUFFIX,koowo.com,DIRECT
 DOMAIN-SUFFIX,ks-cdn.com,DIRECT
 DOMAIN-SUFFIX,kuaidi100.com,DIRECT
 DOMAIN-SUFFIX,kuaishou.com,DIRECT
@@ -353,6 +357,7 @@ DOMAIN-SUFFIX,sc115.com,DIRECT
 DOMAIN-SUFFIX,sf-express.com,DIRECT
 DOMAIN-SUFFIX,shimo.im,DIRECT
 DOMAIN-SUFFIX,shipsoho.com,DIRECT
+DOMAIN-SUFFIX,showstart.com,DIRECT
 DOMAIN-SUFFIX,shundaoer.tech,DIRECT
 DOMAIN-SUFFIX,sina.com,DIRECT
 DOMAIN-SUFFIX,skycn.com,DIRECT
@@ -377,6 +382,7 @@ DOMAIN-SUFFIX,sspai.com,DIRECT
 DOMAIN-SUFFIX,ssports.com,DIRECT
 DOMAIN-SUFFIX,staticfile.org,DIRECT
 DOMAIN-SUFFIX,suning.com,DIRECT
+DOMAIN-SUFFIX,szbdyd.com,DIRECT
 DOMAIN-SUFFIX,talkingdata.com,DIRECT
 DOMAIN-SUFFIX,tankeai.com,DIRECT
 DOMAIN-SUFFIX,taobao.com,DIRECT
@@ -446,6 +452,7 @@ DOMAIN-SUFFIX,xitu.io,DIRECT
 DOMAIN-SUFFIX,xuexili.com,DIRECT
 DOMAIN-SUFFIX,xueyuanjun.com,DIRECT
 DOMAIN-SUFFIX,xunlei.com,DIRECT
+DOMAIN-SUFFIX,xycdn.com,DIRECT
 DOMAIN-SUFFIX,xywy.com,DIRECT
 DOMAIN-SUFFIX,yandex.ru,DIRECT
 DOMAIN-SUFFIX,yangkeduo.com,DIRECT
@@ -461,6 +468,7 @@ DOMAIN-SUFFIX,yizhibo.com,DIRECT
 DOMAIN-SUFFIX,ykimg.com,DIRECT
 DOMAIN-SUFFIX,youdao.com,DIRECT
 DOMAIN-SUFFIX,youku.com,DIRECT
+DOMAIN-SUFFIX,ytimg.com,DIRECT
 DOMAIN-SUFFIX,yundaex.com,DIRECT
 DOMAIN-SUFFIX,yuque.com,DIRECT
 DOMAIN-SUFFIX,yw11.com,DIRECT
