--- a/rules.conf
+++ b/rules.conf
@@ -94,6 +94,7 @@ DOMAIN-SUFFIX,baike.com,DIRECT
 DOMAIN-SUFFIX,baitiao.com,DIRECT
 DOMAIN-SUFFIX,bankofchina.com,DIRECT
 DOMAIN-SUFFIX,baomihua.com,DIRECT
+DOMAIN-SUFFIX,bazhuayu.com,DIRECT
 DOMAIN-SUFFIX,bcebos.com,DIRECT
 DOMAIN-SUFFIX,bdimg.com,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,DIRECT
@@ -194,11 +195,13 @@ DOMAIN-SUFFIX,getui.com,DIRECT
 DOMAIN-SUFFIX,gifhome.com,DIRECT
 DOMAIN-SUFFIX,gratisography.com,DIRECT
 DOMAIN-SUFFIX,greenxf.com,DIRECT
+DOMAIN-SUFFIX,grg-gas.com,DIRECT
 DOMAIN-SUFFIX,growingio.com,DIRECT
 DOMAIN-SUFFIX,gtimg.com,DIRECT
 DOMAIN-SUFFIX,guazi.com,DIRECT
 DOMAIN-SUFFIX,guokr.com,DIRECT
 DOMAIN-SUFFIX,gushiwen.org,DIRECT
+DOMAIN-SUFFIX,haier.com,DIRECT
 DOMAIN-SUFFIX,hanmarketing.com.au,DIRECT
 DOMAIN-SUFFIX,hao123.com,DIRECT
 DOMAIN-SUFFIX,hao123img.com,DIRECT
@@ -266,6 +269,8 @@ DOMAIN-SUFFIX,kuaidi100.com,DIRECT
 DOMAIN-SUFFIX,kuaishou.com,DIRECT
 DOMAIN-SUFFIX,kugou.com,DIRECT
 DOMAIN-SUFFIX,lanhuapp.com,DIRECT
+DOMAIN-SUFFIX,lanzoub.com,DIRECT
+DOMAIN-SUFFIX,lanzoug.com,DIRECT
 DOMAIN-SUFFIX,laozuo.org,DIRECT
 DOMAIN-SUFFIX,laravel-admin.org,DIRECT
 DOMAIN-SUFFIX,le.com,DIRECT
@@ -436,6 +441,7 @@ DOMAIN-SUFFIX,win4000.com,DIRECT
 DOMAIN-SUFFIX,wkzf.com,DIRECT
 DOMAIN-SUFFIX,womai.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
+DOMAIN-SUFFIX,wpfavs.com,DIRECT
 DOMAIN-SUFFIX,wscdns.com,DIRECT
 DOMAIN-SUFFIX,xdowns.com,DIRECT
 DOMAIN-SUFFIX,xiami.com,DIRECT
