--- a/rules.conf
+++ b/rules.conf
@@ -90,6 +90,7 @@ DOMAIN-SUFFIX,atianqi.com,DIRECT
 DOMAIN-SUFFIX,autonavi.com,DIRECT
 DOMAIN-SUFFIX,babybus.com,DIRECT
 DOMAIN-SUFFIX,baidu.com,DIRECT
+DOMAIN-SUFFIX,baidupcs.com,DIRECT
 DOMAIN-SUFFIX,baike.com,DIRECT
 DOMAIN-SUFFIX,baitiao.com,DIRECT
 DOMAIN-SUFFIX,bankofchina.com,DIRECT
@@ -355,6 +356,7 @@ DOMAIN-SUFFIX,qyer.com,DIRECT
 DOMAIN-SUFFIX,recaptcha.net,DIRECT
 DOMAIN-SUFFIX,renren.com,DIRECT
 DOMAIN-SUFFIX,rfchost.com,DIRECT
+DOMAIN-SUFFIX,router.asus.com,DIRECT
 DOMAIN-SUFFIX,rtbasia.com,DIRECT
 DOMAIN-SUFFIX,runoob.com,DIRECT
 DOMAIN-SUFFIX,sc115.com,DIRECT
