--- a/rules.conf
+++ b/rules.conf
@@ -28,6 +28,7 @@ DOMAIN-SUFFIX,1ppt.com,DIRECT
 DOMAIN-SUFFIX,1ting.com,DIRECT
 DOMAIN-SUFFIX,21cn.com,DIRECT
 DOMAIN-SUFFIX,300hu.com,DIRECT
+DOMAIN-SUFFIX,32r.com,DIRECT
 DOMAIN-SUFFIX,3322.cc,DIRECT
 DOMAIN-SUFFIX,3366.com,DIRECT
 DOMAIN-SUFFIX,3366img.com,DIRECT
@@ -39,15 +40,17 @@ DOMAIN-SUFFIX,3dmgame.com,DIRECT
 DOMAIN-SUFFIX,4399.com,DIRECT
 DOMAIN-SUFFIX,51.la,DIRECT
 DOMAIN-SUFFIX,51cto.com,DIRECT
+DOMAIN-SUFFIX,51epei.com,DIRECT
 DOMAIN-SUFFIX,51test.net,DIRECT
 DOMAIN-SUFFIX,51wnl-cq.com,DIRECT
 DOMAIN-SUFFIX,56.com,DIRECT
 DOMAIN-SUFFIX,58.com,DIRECT
 DOMAIN-SUFFIX,58che.com,DIRECT
 DOMAIN-SUFFIX,58pic.com,DIRECT
-DOMAIN-SUFFIX,64clouds.com,DIRECT
+DOMAIN-SUFFIX,67tool.com,DIRECT
 DOMAIN-SUFFIX,699pic.com,DIRECT
 DOMAIN-SUFFIX,6k6g.com,DIRECT
+DOMAIN-SUFFIX,71edge-com,DIRECT
 DOMAIN-SUFFIX,7down.com,DIRECT
 DOMAIN-SUFFIX,7fresh.com,DIRECT
 DOMAIN-SUFFIX,800bestex.com,DIRECT
@@ -62,12 +65,13 @@ DOMAIN-SUFFIX,acgvideo.com,DIRECT
 DOMAIN-SUFFIX,ali213.net,DIRECT
 DOMAIN-SUFFIX,aliapp.org,DIRECT
 DOMAIN-SUFFIX,alibaba.com,DIRECT
-DOMAIN-SUFFIX,alibaba-inc.com,DIRECT
 DOMAIN-SUFFIX,alibabacloud.com,DIRECT
+DOMAIN-SUFFIX,alibaba-inc.com,DIRECT
 DOMAIN-SUFFIX,alibabausercontent.com,DIRECT
 DOMAIN-SUFFIX,alicdn.com,DIRECT
 DOMAIN-SUFFIX,alidns.com,DIRECT
 DOMAIN-SUFFIX,alimama.com,DIRECT
+DOMAIN-SUFFIX,alimebot.com,DIRECT
 DOMAIN-SUFFIX,alipay.com,DIRECT
 DOMAIN-SUFFIX,alipayobjects.com,DIRECT
 DOMAIN-SUFFIX,alipcsec.com,DIRECT
@@ -102,12 +106,15 @@ DOMAIN-SUFFIX,bdstatic.com,DIRECT
 DOMAIN-SUFFIX,bejson.com,DIRECT
 DOMAIN-SUFFIX,bidchance.com,DIRECT
 DOMAIN-SUFFIX,bilibili.com,DIRECT
+DOMAIN-SUFFIX,biligame.com,DIRECT
 DOMAIN-SUFFIX,bilivideo.com,DIRECT
 DOMAIN-SUFFIX,bing.com,DIRECT
 DOMAIN-SUFFIX,bitauto.com,DIRECT
 DOMAIN-SUFFIX,bjcathay.com,DIRECT
+DOMAIN-SUFFIX,bootcdn.net,DIRECT
 DOMAIN-SUFFIX,bootcss.com,DIRECT
 DOMAIN-SUFFIX,bosszhipin.com,DIRECT
+DOMAIN-SUFFIX,bwhstatus.com,DIRECT
 DOMAIN-SUFFIX,c7sky.com,DIRECT
 DOMAIN-SUFFIX,cainiao.com,DIRECT
 DOMAIN-SUFFIX,camera360.com,DIRECT
@@ -126,6 +133,8 @@ DOMAIN-SUFFIX,chiphell.com,DIRECT
 DOMAIN-SUFFIX,chongdiantou.com,DIRECT
 DOMAIN-SUFFIX,cibntv.net,DIRECT
 DOMAIN-SUFFIX,citicbank.com,DIRECT
+DOMAIN-SUFFIX,clewm.net,DIRECT
+DOMAIN-SUFFIX,cli.im,DIRECT
 DOMAIN-SUFFIX,clouddn.com,DIRECT
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,cn,DIRECT
@@ -148,6 +157,7 @@ DOMAIN-SUFFIX,damengxiang.me,DIRECT
 DOMAIN-SUFFIX,dangdang.com,DIRECT
 DOMAIN-SUFFIX,daojia.com,DIRECT
 DOMAIN-SUFFIX,dcloud.io,DIRECT
+DOMAIN-SUFFIX,dd-advisor.com,DIRECT
 DOMAIN-SUFFIX,ddrk.me,DIRECT
 DOMAIN-SUFFIX,deppon.com,DIRECT
 DOMAIN-SUFFIX,dianping.com,DIRECT
@@ -165,6 +175,8 @@ DOMAIN-SUFFIX,douyu.com,DIRECT
 DOMAIN-SUFFIX,douyuscdn.com,DIRECT
 DOMAIN-SUFFIX,doyoudo.com,DIRECT
 DOMAIN-SUFFIX,drivergenius.com,DIRECT
+DOMAIN-SUFFIX,duitang.com,DIRECT
+DOMAIN-SUFFIX,duolabao.com,DIRECT
 DOMAIN-SUFFIX,duowan.com,DIRECT
 DOMAIN-SUFFIX,easebar.com,DIRECT
 DOMAIN-SUFFIX,eastday.com,DIRECT
@@ -186,6 +198,7 @@ DOMAIN-SUFFIX,fanlibang.com,DIRECT
 DOMAIN-SUFFIX,feisuzhibo.com,DIRECT
 DOMAIN-SUFFIX,feng.com,DIRECT
 DOMAIN-SUFFIX,fengniao.com,DIRECT
+DOMAIN-SUFFIX,fliggy.com,DIRECT
 DOMAIN-SUFFIX,gamersky.com,DIRECT
 DOMAIN-SUFFIX,ganji.com,DIRECT
 DOMAIN-SUFFIX,ganjistatic1.com,DIRECT
@@ -206,10 +219,12 @@ DOMAIN-SUFFIX,haier.com,DIRECT
 DOMAIN-SUFFIX,hanmarketing.com.au,DIRECT
 DOMAIN-SUFFIX,hao123.com,DIRECT
 DOMAIN-SUFFIX,hao123img.com,DIRECT
+DOMAIN-SUFFIX,hc-cdn.com,DIRECT
 DOMAIN-SUFFIX,hdslb.com,DIRECT
 DOMAIN-SUFFIX,heikeyun.net,DIRECT
 DOMAIN-SUFFIX,hellorf.com,DIRECT
 DOMAIN-SUFFIX,hexun.com,DIRECT
+DOMAIN-SUFFIX,hicloud.com,DIRECT
 DOMAIN-SUFFIX,hnair.com,DIRECT
 DOMAIN-SUFFIX,huaban.com,DIRECT
 DOMAIN-SUFFIX,huashu-inc.com,DIRECT
@@ -219,6 +234,7 @@ DOMAIN-SUFFIX,hudong.com,DIRECT
 DOMAIN-SUFFIX,huofar.com,DIRECT
 DOMAIN-SUFFIX,hupu.com,DIRECT
 DOMAIN-SUFFIX,huya.com,DIRECT
+DOMAIN-SUFFIX,hyext.com,DIRECT
 DOMAIN-SUFFIX,ibaotu.com,DIRECT
 DOMAIN-SUFFIX,icourse163.org,DIRECT
 DOMAIN-SUFFIX,idc.wiki,DIRECT
@@ -249,8 +265,10 @@ DOMAIN-SUFFIX,jd.com,DIRECT
 DOMAIN-SUFFIX,jd.hk,DIRECT
 DOMAIN-SUFFIX,jdbusiness.com,DIRECT
 DOMAIN-SUFFIX,jdcloud.com,DIRECT
+DOMAIN-SUFFIX,jdl.com,DIRECT
 DOMAIN-SUFFIX,jdpay.com,DIRECT
 DOMAIN-SUFFIX,jdwl.com,DIRECT
+DOMAIN-SUFFIX,jhscm.com,DIRECT
 DOMAIN-SUFFIX,jianguoyun.com,DIRECT
 DOMAIN-SUFFIX,jianke.com,DIRECT
 DOMAIN-SUFFIX,jianshu.com,DIRECT
@@ -258,7 +276,9 @@ DOMAIN-SUFFIX,jianshu.io,DIRECT
 DOMAIN-SUFFIX,jiathis.com,DIRECT
 DOMAIN-SUFFIX,jiayuan.com,DIRECT
 DOMAIN-SUFFIX,jingxi.com,DIRECT
+DOMAIN-SUFFIX,jiyoujia.com,DIRECT
 DOMAIN-SUFFIX,jkcsjd.com,DIRECT
+DOMAIN-SUFFIX,jomodns.com,DIRECT
 DOMAIN-SUFFIX,kaola.com,DIRECT
 DOMAIN-SUFFIX,ke.com,DIRECT
 DOMAIN-SUFFIX,kekenet.com,DIRECT
@@ -274,6 +294,7 @@ DOMAIN-SUFFIX,lanzoub.com,DIRECT
 DOMAIN-SUFFIX,lanzoug.com,DIRECT
 DOMAIN-SUFFIX,laozuo.org,DIRECT
 DOMAIN-SUFFIX,laravel-admin.org,DIRECT
+DOMAIN-SUFFIX,lastpass.com,DIRECT
 DOMAIN-SUFFIX,le.com,DIRECT
 DOMAIN-SUFFIX,learnku.com,DIRECT
 DOMAIN-SUFFIX,leyunge.com,DIRECT
@@ -288,6 +309,7 @@ DOMAIN-SUFFIX,longzhulive.com,DIRECT
 DOMAIN-SUFFIX,lvmama.com,DIRECT
 DOMAIN-SUFFIX,macrr.com,DIRECT
 DOMAIN-SUFFIX,mafengwo.net,DIRECT
+DOMAIN-SUFFIX,magiconch.com,DIRECT
 DOMAIN-SUFFIX,meishij.net,DIRECT
 DOMAIN-SUFFIX,meitu.com,DIRECT
 DOMAIN-SUFFIX,meituan.com,DIRECT
@@ -314,6 +336,7 @@ DOMAIN-SUFFIX,myqcloud.com,DIRECT
 DOMAIN-SUFFIX,mzi8.com,DIRECT
 DOMAIN-SUFFIX,nanrenwo.net,DIRECT
 DOMAIN-SUFFIX,netease.com,DIRECT
+DOMAIN-SUFFIX,netease.im,DIRECT
 DOMAIN-SUFFIX,ngacn.cc,DIRECT
 DOMAIN-SUFFIX,nuomi.com,DIRECT
 DOMAIN-SUFFIX,onlinedown.net,DIRECT
@@ -338,16 +361,24 @@ DOMAIN-SUFFIX,pptv.com,DIRECT
 DOMAIN-SUFFIX,processon.com,DIRECT
 DOMAIN-SUFFIX,pstatp.com,DIRECT
 DOMAIN-SUFFIX,qbox.me,DIRECT
+DOMAIN-SUFFIX,qcc.com,DIRECT
 DOMAIN-SUFFIX,qcloud.com,DIRECT
 DOMAIN-SUFFIX,qcloudcdn.com,DIRECT
+DOMAIN-SUFFIX,qcloudimg.com,DIRECT
+DOMAIN-SUFFIX,qichacha.com,DIRECT
 DOMAIN-SUFFIX,qidian.com,DIRECT
 DOMAIN-SUFFIX,qiecdn.com,DIRECT
 DOMAIN-SUFFIX,qiku.com,DIRECT
+DOMAIN-SUFFIX,qingzhouip.com,DIRECT
 DOMAIN-SUFFIX,qiniu.com,DIRECT
 DOMAIN-SUFFIX,qiniu.io,DIRECT
+DOMAIN-SUFFIX,qiniuapi.com,DIRECT
+DOMAIN-SUFFIX,qiniudns.com,DIRECT
 DOMAIN-SUFFIX,qiushibaike.com,DIRECT
 DOMAIN-SUFFIX,qiuziti.com,DIRECT
+DOMAIN-SUFFIX,qiyi.com,DIRECT
 DOMAIN-SUFFIX,qiyukf.com,DIRECT
+DOMAIN-SUFFIX,qiyukf.net,DIRECT
 DOMAIN-SUFFIX,qq.com,DIRECT
 DOMAIN-SUFFIX,qunar.com,DIRECT
 DOMAIN-SUFFIX,qunliao.info,DIRECT
@@ -377,6 +408,7 @@ DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,so.com,DIRECT
 DOMAIN-SUFFIX,sobaidupan.com,DIRECT
 DOMAIN-SUFFIX,sobot.com,DIRECT
+DOMAIN-SUFFIX,soboten.com,DIRECT
 DOMAIN-SUFFIX,sogou.com,DIRECT
 DOMAIN-SUFFIX,sohu.com,DIRECT
 DOMAIN-SUFFIX,soku.com,DIRECT
@@ -396,8 +428,10 @@ DOMAIN-SUFFIX,taobaocdn.com,DIRECT
 DOMAIN-SUFFIX,taoche.com,DIRECT
 DOMAIN-SUFFIX,tbcache.com,DIRECT
 DOMAIN-SUFFIX,tencent.com,DIRECT
+DOMAIN-SUFFIX,tencent-cloud.com,DIRECT
 DOMAIN-SUFFIX,tencentcs.com,DIRECT
 DOMAIN-SUFFIX,tenpay.com,DIRECT
+DOMAIN-SUFFIX,tianpeng.com,DIRECT
 DOMAIN-SUFFIX,tianyancha.com,DIRECT
 DOMAIN-SUFFIX,tingyun.com,DIRECT
 DOMAIN-SUFFIX,tjjt360.com,DIRECT
@@ -422,13 +456,17 @@ DOMAIN-SUFFIX,verycd.com,DIRECT
 DOMAIN-SUFFIX,videojj.com,DIRECT
 DOMAIN-SUFFIX,vip.com,DIRECT
 DOMAIN-SUFFIX,vipmro.com,DIRECT
+DOMAIN-SUFFIX,vipmro.net,DIRECT
 DOMAIN-SUFFIX,vipstatic.com,DIRECT
 DOMAIN-SUFFIX,visualhunt.com,DIRECT
 DOMAIN-SUFFIX,vmall.com,DIRECT
 DOMAIN-SUFFIX,voidcn.com,DIRECT
+DOMAIN-SUFFIX,volccdn.com,DIRECT
+DOMAIN-SUFFIX,volceapplog.com,DIRECT
 DOMAIN-SUFFIX,vpimg2.com,DIRECT
 DOMAIN-SUFFIX,vpimg3.com,DIRECT
 DOMAIN-SUFFIX,vpimg4.com,DIRECT
+DOMAIN-SUFFIX,vzuu.com,DIRECT
 DOMAIN-SUFFIX,wandoujia.com,DIRECT
 DOMAIN-SUFFIX,webkaka.com,DIRECT
 DOMAIN-SUFFIX,wechat.com,DIRECT
@@ -441,10 +479,12 @@ DOMAIN-SUFFIX,weiyun.com,DIRECT
 DOMAIN-SUFFIX,wendangku.net,DIRECT
 DOMAIN-SUFFIX,win4000.com,DIRECT
 DOMAIN-SUFFIX,wkzf.com,DIRECT
+DOMAIN-SUFFIX,woa.com,DIRECT
 DOMAIN-SUFFIX,womai.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
 DOMAIN-SUFFIX,wpfavs.com,DIRECT
 DOMAIN-SUFFIX,wscdns.com,DIRECT
+DOMAIN-SUFFIX,xcc.cn,DIRECT
 DOMAIN-SUFFIX,xdowns.com,DIRECT
 DOMAIN-SUFFIX,xiami.com,DIRECT
 DOMAIN-SUFFIX,xiami.net,DIRECT
@@ -453,6 +493,7 @@ DOMAIN-SUFFIX,xiaomi.com,DIRECT
 DOMAIN-SUFFIX,xiazaiba.com,DIRECT
 DOMAIN-SUFFIX,xiazaizhijia.com,DIRECT
 DOMAIN-SUFFIX,xin.com,DIRECT
+DOMAIN-SUFFIX,xinchacha.com,DIRECT
 DOMAIN-SUFFIX,xinhuanet.com,DIRECT
 DOMAIN-SUFFIX,xitongzhijia.net,DIRECT
 DOMAIN-SUFFIX,xitu.io,DIRECT
@@ -463,6 +504,7 @@ DOMAIN-SUFFIX,xycdn.com,DIRECT
 DOMAIN-SUFFIX,xywy.com,DIRECT
 DOMAIN-SUFFIX,yandex.ru,DIRECT
 DOMAIN-SUFFIX,yangkeduo.com,DIRECT
+DOMAIN-SUFFIX,ybscjp.com,DIRECT
 DOMAIN-SUFFIX,yeah.net,DIRECT
 DOMAIN-SUFFIX,yhd.com,DIRECT
 DOMAIN-SUFFIX,yicai.com,DIRECT
@@ -475,12 +517,16 @@ DOMAIN-SUFFIX,yizhibo.com,DIRECT
 DOMAIN-SUFFIX,ykimg.com,DIRECT
 DOMAIN-SUFFIX,youdao.com,DIRECT
 DOMAIN-SUFFIX,youku.com,DIRECT
+DOMAIN-SUFFIX,yuewen.com,DIRECT
 DOMAIN-SUFFIX,yundaex.com,DIRECT
+DOMAIN-SUFFIX,yunpei.com,DIRECT
+DOMAIN-SUFFIX,yunxiu.com,DIRECT
 DOMAIN-SUFFIX,yuque.com,DIRECT
 DOMAIN-SUFFIX,yw11.com,DIRECT
 DOMAIN-SUFFIX,yximgs.com,DIRECT
 DOMAIN-SUFFIX,yy.com,DIRECT
 DOMAIN-SUFFIX,zbj.com,DIRECT
+DOMAIN-SUFFIX,zbjimg.com,DIRECT
 DOMAIN-SUFFIX,zdic.net,DIRECT
 DOMAIN-SUFFIX,zhanqi.tv,DIRECT
 DOMAIN-SUFFIX,zhaopin.com,DIRECT
